--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <li>Ejecutar e instalar.</li>
 <li>Abrir una terminal.</li>
 <li>Ejecutar con el comando 'node'
-<img src="./nodewindows.png">
+<img src="./images/nodewindows.png">
 </li>
 </ul>
 
@@ -60,7 +60,7 @@ sudo apt-get install npm
 </code></pre>
 
 <p>*Utilizar con el comando <code>nodejs</code>
-<img src="./nodelinux.png"></p>
+<img src="./images/nodelinux.png"></p>
       </section>
     </div>
 
