--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </li>
 <li>Ejecutar e instalar.</li>
 <li>Abrir una terminal.</li>
-<li>Ejecutar con el comando `node`
+<li>Ejecutar con el comando <code>node</code>
 <img src="./images/nodewindows.png">
 </li>
 </ul>
